--- a/chartpress.yaml
+++ b/chartpress.yaml
@@ -14,8 +14,8 @@ charts:
     #      locally developed in a remote k8s cluster.
     imagePrefix: jupyterhub/k8s-
     repo:
-      git: remche/helm-chart
-      published: https://remche.github.io/helm-chart
+      git: jupyterhub/helm-chart
+      published: https://jupyterhub.github.io/helm-chart
 
     images:
       # hub, the container where JupyterHub, KubeSpawner, and the configured
